--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -17,9 +17,9 @@ Here are a **few different ways you can get started with Bridge**:
 - Download the latest Bridge version from [Pypi here](https://pypi.org/project/apache-bridge/)
 - Setup Bridge locally with one command
   using [Docker Compose](installation/installing-bridge-using-docker-compose)
-- Download the [Docker image](https://hub.docker.com/r/apache/bridge) from Dockerhub
+- Download the [Docker image](https://hub.docker.com/r/kiranbmore0101/bridge) from Dockerhub
 - Install the latest version of Bridge
-  [from GitHub](https://github.com/apache/bridge/tree/latest)
+  [from GitHub](https://github.com/kiranbmore0101/bridge/tree/latest)
 
 Bridge provides:
 
@@ -57,4 +57,4 @@ production environment inside Kubernetes and serves 600+ daily active users view
 a day.
 
 You can find a partial list of industries and companies embracing Bridge
-[on this page in GitHub](https://github.com/apache/bridge/blob/master/RESOURCES/INTHEWILD.md).
+[on this page in GitHub](https://github.com/kiranbmore0101/bridge/blob/master/RESOURCES/INTHEWILD.md).
